# BugChecker

./: BugChecker.cpp  CMakeLists.txt  GetEntryExit.cpp  IRQChecker.cpp  Makefile  MyBugReporter.cpp  MyBugReporter.h
clang_patch/: BasicValueFactory.patch  ccc-analyzer.patch
linux_patch/: patcher  scan_commit  v3.15  v3.16  v3.17
models/: pci.c
scripts/: BugChecker.sh  checker.sh  driver_life.c  instrument.py  run_checker  scan-build2  scan.sh  traverse.py
test/: GetEntryPoint.c  GetEntryPoint.h  GetExitPoint.c  IRQChecker.c
